--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Contact</title>
+    <title>Mike Hyler Contact</title>
 
     <link rel="shortcut icon" href="./img/favicon-32x32.png">
 
