--- a/contact.html
+++ b/contact.html
@@ -69,6 +69,8 @@
 
     <div class="form">
         <h2>Let's Talk</h2>
+        <p>Ask me about my projects, tell me about yours. Let’s network. Let’s collaborate. Let’s get to know each
+            other. </p>
         <form action="" method="post" id="contact-form">
             <label class="standard-label form_item" for="contact-email"> E-Mail </label>
             <!--Added for attribute for accessibility-->
