Changed <h1> and <p> on index.html

--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@
 
     <div class="profile">
         <img src="./img/profile-pic.jpg" class="profile_portrait" alt="Profile photograph of Mike Hyler">
-        <h1>Hello World</h1>
-        <p class="profile_paragraph">My name is Mike Hyler. I'm a <span>web</span> developer from NYC</p>
+        <h1>Hey<br>You've made it!</h1>
+        <p class="profile_paragraph">
+            Now that you’re here, kick your feet up and make yourself at home.
+            If we haven’t met yet, I’m Mike a web dev in Brooklyn, NY.
+            Take a look at some of my projects and let me know what you think.
+            I can take it.</p>>
         <a href="https://www.google.com/" target="_blank"> Check out some of my code!</a>
     </div>
 
